# numba-quant

./: .gitignore  README.md  backtest_wrapper.py  generate_script.py  numba.md  numba_calculation_api.py  numba_example.py  numba_parallel_kernels.py  pyproject.toml  test.py
Test/: test_utils.py
Test/test_config/: test_config_accuracy.py
Test/test_indicators/: test_atr.py  test_bbands.py  test_psar.py  test_rsi.py  test_sma.py
database/live/BTC_USDT/4h/: BTC_USDT_4h_20230228 160000.csv
indicators/: atr.py  bbands.py  indicator.md  indicator_selector.py  indicators_config.py  psar.py  rma.py  rsi.py  sma.py  tr.py
utils/: constants.py  data_loading.py  display.py  indicator_processing.py  numba_helpers.py  numpy_utils.py
